--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<nav>
 				<a href="book.php"><button id="menu_bts">Books</button></a>
 				<button id="menu_bts">Authors</button>
-				<button id="menu_bts">BookAuthors</button>
+				<a href="bookauthor.php"><button id="menu_bts">BookAuthors</button></a>
 				<button id="menu_bts">Editorial</button>
 				</nav>
 		</div>			
