Menu desplegable Listo

--- a/index.html
+++ b/index.html
@@ -7,13 +7,57 @@
 		<link rel="shortcut icon" href="bk.png"> 	
 	</head>
 	<body class="bar">
+		<!--
 		<div >
 			<nav>
 				<a href="book.php"><button id="menu_bts">Books</button></a>
 				<button id="menu_bts">Authors</button>
-				<a href="bookauthor.php"><button id="menu_bts">BookAuthors</button></a>
+				<a href="book.php"><button id="menu_bts">BookAuthors</button></a>
 				<button id="menu_bts">Editorial</button>
 				</nav>
+		</div>-->
+		<div>
+		<ul class = "nav">
+			<li>
+				<a href="index.html">Home<span class = "flecha">&#9660</span></a>
+			</li>
+			<li>
+				<a href="#">Books<span class = "flecha">&#9660</span></a>
+				<ul>
+					<li><a href="book.php">Add Book<span class = "flecha">&#9660</span></a></li>
+					<li><a href="#">Remove Book<span class = "flecha">&#9660</span></a></li>
+					<li><a href="#">Update Book<span class = "flecha">&#9660</span></a></li>
+					<li><a href="#">List Book<span class = "flecha">&#9660</span></a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="#">Authors<span class = "flecha">&#9660</span></a>
+				<ul>
+					<li><a href="#">Add Author<span class = "flecha">&#9660</span></a></li>
+					<li><a href="#">Remove Author<span class = "flecha">&#9660</span></a></li>
+					<li><a href="#">Update Author<span class = "flecha">&#9660</span></a></li>
+					<li><a href="#">List Authors<span class = "flecha">&#9660</span></a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="#">Book Authors<span class = "flecha">&#9660</span></a>
+				<ul>
+					<li><a href="book.php">Add Book Author<span class = "flecha">&#9660</span></a></li>
+					<li><a href="#">Remove Book Author<span class = "flecha">&#9660</span></a></li>
+					<li><a href="#">Update Book Author<span class = "flecha">&#9660</span></a></li>
+					<li><a href="#">List Book Authors<span class = "flecha">&#9660</span></a></li>
+				</ul>
+			</li>	
+			<li>
+				<a href="#">Editorial<span class = "flecha">&#9660</span></a>
+				<ul>
+					<li><a href="#">Add Editorial<span class = "flecha">&#9660</span></a></li>
+					<li><a href="#">Remove Editorial<span class = "flecha">&#9660</span></a></li>
+					<li><a href="#">Update Editorial<span class = "flecha">&#9660</span></a></li>
+					<li><a href="#">List Editorials<span class = "flecha">&#9660</span></a></li>
+				</ul>
+			</li>				
+		</ul>
 		</div>			
 	</body>
 </html>
