--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<li>
 				<a href="#">Book Authors<span class = "flecha">&#9660</span></a>
 				<ul>
-					<li><a href="book.php">Add Book Author<span class = "flecha">&#9660</span></a></li>
+					<li><a href="bookauthor.php">Add Book Author<span class = "flecha">&#9660</span></a></li>
 					<li><a href="#">Remove Book Author<span class = "flecha">&#9660</span></a></li>
 					<li><a href="#">Update Book Author<span class = "flecha">&#9660</span></a></li>
 					<li><a href="#">List Book Authors<span class = "flecha">&#9660</span></a></li>
