C de todos listo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<li>
 				<a href="#">Authors<span class = "flecha">&#9660</span></a>
 				<ul>
-					<li><a href="#">Add Author<span class = "flecha">&#9660</span></a></li>
+					<li><a href="author.php">Add Author<span class = "flecha">&#9660</span></a></li>
 					<li><a href="#">Remove Author<span class = "flecha">&#9660</span></a></li>
 					<li><a href="#">Update Author<span class = "flecha">&#9660</span></a></li>
 					<li><a href="#">List Authors<span class = "flecha">&#9660</span></a></li>
@@ -42,7 +42,7 @@
 			<li>
 				<a href="#">Editorial<span class = "flecha">&#9660</span></a>
 				<ul>
-					<li><a href="#">Add Editorial<span class = "flecha">&#9660</span></a></li>
+					<li><a href="editorial.php">Add Editorial<span class = "flecha">&#9660</span></a></li>
 					<li><a href="#">Remove Editorial<span class = "flecha">&#9660</span></a></li>
 					<li><a href="#">Update Editorial<span class = "flecha">&#9660</span></a></li>
 					<li><a href="#">List Editorials<span class = "flecha">&#9660</span></a></li>
