Modificar libros listo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<ul>
 					<li><a href="book.php">Add Book<span class = "flecha">&#9660</span></a></li>
 					<li><a href="del_book.php">Remove Book<span class = "flecha">&#9660</span></a></li>
-					<li><a href="#">Update Book<span class = "flecha">&#9660</span></a></li>
+					<li><a href="upd_book.php">Update Book<span class = "flecha">&#9660</span></a></li>
 					<li><a href="list_books.php">List Books<span class = "flecha">&#9660</span></a></li>
 				</ul>
 			</li>
@@ -35,7 +35,6 @@
 				<ul>
 					<li><a href="bookauthor.php">Add Book Author<span class = "flecha">&#9660</span></a></li>
 					<li><a href="del_bkau.php">Remove Book Author<span class = "flecha">&#9660</span></a></li>
-					<li><a href="#">Update Book Author<span class = "flecha">&#9660</span></a></li>
 					<li><a href="list_bkau.php">List Book Authors<span class = "flecha">&#9660</span></a></li>
 				</ul>
 			</li>	
