Modificado de autor listo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<ul>
 					<li><a href="author.php">Add Author<span class = "flecha">&#9660</span></a></li>
 					<li><a href="del_author.php">Remove Author<span class = "flecha">&#9660</span></a></li>
-					<li><a href="#">Update Author<span class = "flecha">&#9660</span></a></li>
+					<li><a href="upd_author.php">Update Author<span class = "flecha">&#9660</span></a></li>
 					<li><a href="list_authors.php">List Authors<span class = "flecha">&#9660</span></a></li>
 				</ul>
 			</li>
