--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<ul>
 					<li><a href="editorial.php">Add Editorial<span class = "flecha">&#9660</span></a></li>
 					<li><a href="del_edit.php">Remove Editorial<span class = "flecha">&#9660</span></a></li>
-					<li><a href="#">Update Editorial<span class = "flecha">&#9660</span></a></li>
+					<li><a href="upd_edit.php">Update Editorial<span class = "flecha">&#9660</span></a></li>
 					<li><a href="list_editorial.php">List Editorials<span class = "flecha">&#9660</span></a></li>
 				</ul>
 			</li>				
